// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches link fields > brokenLink > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "__broken__",
        "isBroken": true,
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > brokenLink > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "__broken__",
            "isBroken": true,
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "__broken__",
          "isBroken": true,
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "__broken__",
              "isBroken": true,
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "__broken__",
            "isBroken": true,
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "__broken__",
          "isBroken": true,
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > brokenLink > static zone 1`] = `
{
  "field": {
    "id": "__broken__",
    "isBroken": true,
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > existing > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > lazyExisting > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > lazyExisting > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > lazyMigration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > lazyMigration > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > migration > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > migration > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > migration > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > migration > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > migrationNoTags > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-other",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > migrationNoTags > static zone 1`] = `
{
  "field": {
    "id": "id-other",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-other-repository",
        "link_type": "Document",
      },
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-other-repository",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other-repository",
          "link_type": "Document",
        },
        "group": [
          {
            "field": {
              "id": "id-other-repository",
              "link_type": "Document",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-other-repository",
            "link_type": "Document",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-other-repository",
          "link_type": "Document",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > otherRepositoryContentRelationship > static zone 1`] = `
{
  "field": {
    "id": "id-other-repository",
    "link_type": "Document",
  },
}
`;

exports[`patches link fields > richTextLinkNode > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "id": "id-existing",
                "link_type": "Document",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "link_type": "Document",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "link_type": "Document",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "id": "id-existing",
                      "link_type": "Document",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "id": "id-existing",
                    "link_type": "Document",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "id": "id-existing",
                  "link_type": "Document",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link fields > richTextLinkNode > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "id": "id-existing",
            "link_type": "Document",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;
